--- a/Vue_SPA/src/scss/login.scss
+++ b/Vue_SPA/src/scss/login.scss
@@ -15,7 +15,7 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
     justify-content: center;
     background-color: #d8d8d8;
 
-    .login-wrapper {
+    .login-wrapper-login {
       position: absolute;
       width: 560px;
       height: 633px;
