--- a/Vue_SPA/css/login.css
+++ b/Vue_SPA/css/login.css
@@ -18,7 +18,7 @@
   background-color: #d8d8d8;
 }
 
-.login-body .login-outer .login-wrapper {
+.login-body .login-outer .login-wrapper-login {
   position: absolute;
   width: 560px;
   height: 633px;
@@ -26,18 +26,18 @@
   background: white;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper {
   position: relative;
   display: block;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper {
   display: block;
   height: 277px;
   padding-top: 24px;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .logo {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .logo {
   position: relative;
   display: block;
   width: 200px;
@@ -50,7 +50,7 @@
   background-size: 200px auto;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn {
   position: relative;
   display: inline-block;
   width: 300px;
@@ -58,7 +58,7 @@
   margin-top: 24px;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper {
   position: relative;
   display: inline-block;
   width: 740px;
@@ -66,7 +66,7 @@
   text-align: left;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn {
   position: relative;
   display: inline-block;
   width: 300px;
@@ -75,7 +75,7 @@
   border-radius: 8px 8px 8px 8px;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-fb {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-fb {
   position: absolute;
   width: 220px;
   height: 21px;
@@ -88,7 +88,7 @@
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-fb::before {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-fb::before {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -103,13 +103,13 @@
   box-shadow: 1px 0 0 0 #4765a3;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-fb:hover {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-fb:hover {
   transform: translateY(-5px);
   box-shadow: 0 0.3em #244279;
   transition-duration: 0.15s;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weibo {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weibo {
   position: absolute;
   top: 68px;
   width: 220px;
@@ -125,7 +125,7 @@
   z-index: 1;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weibo::before {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weibo::before {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -140,13 +140,13 @@
   background-position: 12px center;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weibo:hover {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weibo:hover {
   transform: translateY(-5px);
   transition-duration: 0.15s;
   box-shadow: 0 0.3em #e06818;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-twitter {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-twitter {
   position: absolute;
   width: 220px;
   height: 21px;
@@ -160,7 +160,7 @@
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-twitter::before {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-twitter::before {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -175,13 +175,13 @@
   box-shadow: 1px 0 0 0 #2593be;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-twitter:hover {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-twitter:hover {
   transform: translateY(-5px);
   transition-duration: 0.15s;
   box-shadow: 0 0.3em #4287d7;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weixin {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weixin {
   position: absolute;
   top: 68px;
   width: 220px;
@@ -197,7 +197,7 @@
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weixin::before {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weixin::before {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -214,13 +214,13 @@
   box-shadow: 1px 0 0 0 #64a534;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weixin:hover {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weixin:hover {
   transform: translateY(-5px);
   transition-duration: 0.15s;
   box-shadow: 0 0.3em #3a7212;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .prev-next {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .prev-next {
   position: absolute;
   top: 180px;
   right: 10%;
@@ -229,7 +229,7 @@
   height: 10%;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .prev-next i[data-click="btn-next"] {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .prev-next i[data-click="btn-next"] {
   display: block;
   float: right;
   width: 19px;
@@ -240,12 +240,12 @@
   background-size: 19px 31px;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .prev-next i[data-click="btn-next"]:hover {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .prev-next i[data-click="btn-next"]:hover {
   background: url(../src/image/img_login_next_pink.png) left center no-repeat;
   background-size: 19px 31px;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .prev-next i[data-click="btn-back"] {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .prev-next i[data-click="btn-back"] {
   display: block;
   float: left;
   width: 19px;
@@ -256,12 +256,12 @@
   background-size: 19px 31px;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .prev-next i[data-click="btn-back"]:hover {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .prev-next i[data-click="btn-back"]:hover {
   background: url(../src/image/img_login_back_pink.png) left center no-repeat;
   background-size: 19px 31px;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .promo {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .promo {
   position: relative;
   margin: 0 10px 24px 10px;
   font-size: 15px;
@@ -269,26 +269,26 @@
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form .login-pinkoi-account {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form .login-pinkoi-account {
   font-size: 20px;
   text-align: center;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form ul {
   position: relative;
   display: block;
   list-style-type: none;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul li {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form ul li {
   position: relative;
   display: block;
   width: 228px;
   left: 17%;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul li #login-id {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form ul li #login-id {
   display: block;
   width: inherit;
   height: inherit;
@@ -299,7 +299,7 @@
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul li #id-input {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form ul li #id-input {
   position: absolute;
   color: #bbb;
   left: 20px;
@@ -315,7 +315,7 @@
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul li #login-password {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form ul li #login-password {
   display: block;
   width: inherit;
   height: inherit;
@@ -326,7 +326,7 @@
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul li #password-input {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form ul li #password-input {
   position: absolute;
   color: #bbb;
   left: 20px;
@@ -342,14 +342,14 @@
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form .button-wrapper {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form .button-wrapper {
   width: 300px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 16px;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form .button-wrapper .login-submit {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form .button-wrapper .login-submit {
   padding-right: 40px;
   padding-left: 40px;
   width: 100%;
@@ -365,14 +365,14 @@
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper .login-help {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper .login-help {
   text-align: center;
   width: 100%;
   line-height: 1;
   font-size: 0;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper .login-help .login-problem {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper .login-help .login-problem {
   text-align: center;
   padding: 16px 0 0 0;
   width: 100%;
@@ -380,7 +380,7 @@
   font-size: 0;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper .login-help .login-problem span[data-click="forgetpassword"] {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper .login-help .login-problem span[data-click="forgetpassword"] {
   position: relative;
   padding-right: 16px;
   font-size: 14px;
@@ -390,7 +390,7 @@
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper .login-help .login-problem span[data-click="resend"] {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper .login-help .login-problem span[data-click="resend"] {
   padding-right: 0;
   padding-left: 16px;
   position: relative;
@@ -402,13 +402,13 @@
   text-align: center;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper .login-help .lower-block {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper .login-help .lower-block {
   font-size: 16px;
   padding: 16px 0 0 0;
   color: #4a4a4a;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper .login-help .lower-block span[data-click="signup"] {
+.login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper .login-help .lower-block span[data-click="signup"] {
   font-size: 16px;
   color: #268ddf;
   cursor: pointer;
