--- a/Vue_SPA/src/scss/login_signup_message.scss
+++ b/Vue_SPA/src/scss/login_signup_message.scss
@@ -2,62 +2,87 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
   "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese",
   "Droid Sans Fallback", sans-serif;
 .modal-mask {
-    position: fixed;
-    z-index: 9998;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, .5);
-    display: table;
-    transition: opacity .3s ease;
-   
-    .modal-wrapper {
-      display: table-cell;
-      vertical-align: middle;
-      .modal-container {
-        width: 300px;
-        margin: 0px auto;
-        padding: 20px 30px;
-        background-color: #fff;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
-        transition: all .3s ease;
-        font-family: $font-family;
-        border-radius: 20px;
-        .modal-message{
-          margin-top:10px;
-          font-family: $font-family;
-          font-size: 16px;
-        }
-        
-        .validation-message{
-          margin-top:10px;
-          font-family: $font-family;
-          font-size: 16px;
-          
-        }
+  position: fixed;
+  z-index: 9998;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: table;
+  transition: opacity 0.3s ease;
 
-        .validation-code{
-          margin-top:100px;
-          font-family: $font-family;
-          font-size: 20px;
+  .modal-wrapper {
+    display: table-cell;
+    vertical-align: middle;
+    .modal-container {
+      width: 300px;
+      margin: 0px auto;
+      padding: 20px 30px;
+      background-color: #fff;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
+      transition: all 0.3s ease;
+      font-family: $font-family;
+      border-radius: 20px;
+      .modal-message {
+        margin-top: 10px;
+        font-family: $font-family;
+        font-size: 16px;
+      }
+
+      .validation-message {
+        margin-top: 10px;
+        font-family: $font-family;
+        font-size: 16px;
+      }
+
+      .validation-code {
+        margin-top: 15px;
+        font-family: $font-family;
+        font-size: 20px;
+        .type_error {
+          height: auto;
+          padding: 40px 38px;
+          max-width: none;
+          display: block;
+          background: #f7e5e5;
+          font-size:16px;
+          color:red;
+        }
+        input {
+          margin-top: 20px;
+          display: inline-block;
+          width: 50px;
+          height: 50px;
+          border-radius: 5px;
+          outline: none;
+          font-size: 25px;
+          text-align: center;
+        }
+      }
+      .modal-default-button {
+        width: 150px;
+        height: 40px;
+        margin-top: 50px;
+        border-radius: 4px;
+        background: #f5548c;
+        font-weight: 600;
+        font-size: 21px;
+        color: #fff;
+
+        letter-spacing: 2px;
+        border: 2px  #f5548c solid;
+        box-sizing: border-box;
+        font-family: $font-family;
+        line-height: 1 !important;
+        cursor: pointer;
+        &:hover{
+          transform: translateY(-5px);
+          box-shadow: 0 0.3em #7c1030;
+          transition-duration: 0.15s;
           
-          input{
-            display: inline-block;
-            width:50px;
-            height:50px;
-            border-radius: 5px;
-            outline: none;
-            font-size: 25px;
-          }
-         
         }
-        .modal-default-button{
-          margin-top:20px;
-        }
-      }    
+      }
     }
   }
-  
-  
- 
+}
