--- a/Vue_SPA/src/scss/login_signup_finish_alert.scss
+++ b/Vue_SPA/src/scss/login_signup_finish_alert.scss
@@ -24,6 +24,35 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
       transition: all 0.3s ease;
       font-family: $font-family;
       border-radius: 20px;
+      font-size: 20px;
+      .success {
+        margin-top: 50px;
+        left: 50%;
+        outline: none;
+        cursor: pointer;
+        .router-link-active {
+          display: flex;
+          width: 200px;
+          height: 50px;
+          margin-left: 50px;
+          background: #f5548c;
+          align-items: center;
+          justify-content: center;
+          text-decoration: none;
+          border-radius: 5px;
+
+          &:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 0.3em #830e35;
+            transition-duration: 0.15s;
+          }
+          span {
+            color: #fff;
+            font-family: $font-family;
+            font-size: 20px;
+          }
+        }
+      }
     }
   }
 }
